Updated Team Homepage and Team information

--- a/public/index.html
+++ b/public/index.html
@@ -17,9 +17,14 @@
       crossorigin="anonymous"
     />
     <link
+      href="https://fonts.googleapis.com/css2?family=Bungee+Shade&display=swap"
+      rel="stylesheet"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Piedra&family=Poppins:wght@300&display=swap"
       rel="stylesheet"
     />
+
     <title>Toronto Comedy Softball League</title>
   </head>
   <body>
